[package]
name = "tpntree"
version = "0.5.0"
edition = "2018"
license = "MIT"
description = "A N-dimensional generalization of region quad/oc-trees."
homepage = "https://github.com/SilvanCodes/tpntree"
documentation = "https://docs.rs/tpntree"
repository = "https://github.com/SilvanCodes/tpntree"
readme = "README.md"
keywords = ["quadtree", "octree"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22"
nalgebra = { version = "0.28", optional = true }

[features]
default = ["nalgebra"]
